refine first section for HowToICP

--- a/_posts/2014-04-10-HowToICP.md
+++ b/_posts/2014-04-10-HowToICP.md
@@ -16,17 +16,39 @@ description: '万恶的ICP备案制度应该唾骂，主机架国外可以省去
 入了Linode东京机房的VPS，国内ping值竟达到500ms（说是“携程信用卡事件”导致怎么的），可过了两天未见好转。加上SHLUG H4活动上@tinyfool 同学说备案一周可完成，果断要求Linode退了款，加入阿里云开始走ICP备案流程。
 
 ##介绍
-本文档记录了个人类域名在阿里云托管首次办理ICP备案过程，本例注册地为江苏苏州，不同地区过程可能有差异（如部分地区可能需要在文件上按手印，阿里云备案系统有提示）。  
 
-**ICP备案**（又叫网站备案、域名备案等）参考百度[ICP备案](http://baike.baidu.com/view/67420.htm)词条：
 
-* 目的：备案的目的就是为了防止在网上从事非法的网站经营活动;
-* 分类：分为经营性和非经营性两类，非经营性相对简单，只是备案登记即可，经营类还需要单项审批;
-* 主题：个人和企业法人两类，个人只能搞非经营类的（实际上估计有不少个人备案的带有经营性质的网站，但不过人家当局说了，要是出了问题就得由站长负责）。
 
-个人理解，ICP备案核心含义是，IP、站长、域名和网站经营内容四者的一个绑定认证关系，其中任何一方信息变更都需要申请变更流程（理论上）。  
+
+**什么是ICP备案？**
+
+照例先码概念，什么是ICP备案，**ICP备案**（又叫网站备案、域名备案等）参考百度[ICP备案](http://baike.baidu.com/view/67420.htm)词条。《互联网信息服务管理办法》规定对**非经营性互联网信息服务**（对应经营性互联网信息服务商另有制度管理，一般试用盈利性质的企业））实行**报备登记**制度。
+
+**ICP备案的含义？**
+
+ICP备案的含义是主机、站长（个人或者法人）、域名和网站经营内容四者的一个绑定认证关系，啥意思呢？就是互联网不是法外之地，如果备案域名指向的这块地（主机）上，以后如果出了啥“漏子”，就拿经过实名认证的站长同学试问。
+
+反过来如果那个域名没有经备案主机提供商（如阿里云之类）就给予了接入权限，那一旦该域名指向的网站出了问题，当局是要拿主机提供商问罪的，所以国内一般大的主机提供商都要求入住的网站先备案再解析，这也是政策规定（当然也有一些小公司打打擦别球，不严格执行）。
+
+**几个细节说明**
+
+1. 仅针对互联网信息服务实行备案制度，即通过80端口访问的http服务（通俗讲就是可通过浏览器访问到），而ftp/ssh等服务并不在此列（个人亲测阿里云亲测通过）;
+2. 仅针对通过域名访问的情况，即如果你是通过ip地址直接访问你的网站，则不需要备案;
+3. 如果你的主机不在神州大地（在境内），则不需要备案，因为该行为最终是由主机商执行，而境外直接无视该规定。
+
+**ICP备案的建议**
+
+下面情况建议直接选择国外主机商（如linode VPS之类），好处是省事，坏处是近来国外的主机抽风越來越严重（可能与GFW有染），访问延迟大。    
+ 1. 嫌ICP备案太麻烦，不愿意折腾;
+ 2. 网站内容见不得阳光;
+
+其他情况推荐尝试选用国内主机+ICP备案方案，整个流程比较复杂，但还算顺利，是个人网站备案，一个流程下来到最终核准共2周时间。
+
+
+下面内容记录了个人类域名在阿里云托管首次办理ICP备案过程，本例注册地为江苏苏州，不同地区过程可能有差异（如部分地区可能需要在文件上按手印，阿里云备案系统有提示）。  
 
 ##总体流程
+
 阿里云首次备案指南：<http://help.aliyun.com/view/13445871.html>  
 阿里云备案管理系统入口：<http://aliyun.gein.cn/webbaaliyun/login.action>  
 
